# robotics_projects

./: README.md
first_project/: CMakeLists.txt  package.xml  rviz_config.rviz
first_project/cfg/: parameters.cfg
first_project/launch/: launch.launch
first_project/src/: gps_to_odom.cpp  lidar_remap.cpp  odom_to_tf.cpp
second_project/: CMakeLists.txt  package.xml  readme.txt  waypoints.csv
second_project/cfg/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  st_config.yaml  teb_local_planner_params.yaml
second_project/launch/: mapping.launch  navigation.launch
second_project/maps/: st_map.pgm  st_map.yaml
second_project/rviz/: mapping_config.rviz  navigation_config.rviz
second_project/src/: goal_publisher.cpp  odom_tf_publisher.cpp
second_project/stage/: map.world  map.yaml  map_nav.pgm  turtlebot.inc
